# alfred

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yml
agent/: start.empty  start.md
backend/: .env.example  Cargo.toml  README.md  bacon.toml
backend/crates/api-server/: Cargo.toml
backend/crates/api-server/src/: http.rs  main.rs
backend/crates/api-server/src/http/: apple_identity.rs  audit.rs  authn.rs  automations.rs  clerk_identity.rs  clerk_jwks_cache.rs  connectors.rs  devices.rs  errors.rs  health.rs  mod.rs  oauth_bridge.rs  observability.rs  preferences.rs  privacy.rs  rate_limit.rs  session.rs  tokens.rs
backend/crates/api-server/src/http/assistant/: ai_observability.rs  attested_key.rs  fetch.rs  memory.rs  mod.rs  query.rs  session.rs  sessions.rs
backend/crates/api-server/src/http/clerk_identity/: tests.rs
backend/crates/api-server/src/http/connectors/: callback.rs  helpers.rs  list.rs  revoke.rs  start.rs  types.rs
backend/crates/enclave-runtime/: Cargo.toml
backend/crates/enclave-runtime/src/: config.rs  http.rs  llm_profiles.rs  main.rs
backend/crates/enclave-runtime/src/config/: tests.rs
backend/crates/enclave-runtime/src/http/: assistant.rs  request_validation.rs  rpc.rs  tests.rs
backend/crates/enclave-runtime/src/http/assistant/: automation.rs  mapping.rs  memory.rs  notifications.rs  proactive.rs  query.rs  session_state.rs
backend/crates/enclave-runtime/src/http/assistant/orchestrator/: calendar.rs  calendar_fallback.rs  calendar_range.rs  chat.rs  chat_fast_path.rs  email.rs  email_fallback.rs  email_plan.rs  mixed.rs  mod.rs  planner.rs  policy.rs
backend/crates/integration-tests/: Cargo.toml
backend/crates/integration-tests/src/: lib.rs
backend/crates/integration-tests/tests/: api_assistant_content_blind_e2e.rs  api_assistant_multiturn_continuity.rs  api_assistant_rate_limit.rs  api_assistant_sessions.rs  api_auth_connectors.rs  api_automations.rs  api_oauth_enclave_fail_closed.rs  auth_privacy_store.rs  automation_store.rs  purge_store.rs  store_worker_security.rs
backend/crates/integration-tests/tests/support/: api_app.rs  assistant_encrypted.rs  clerk.rs  enclave_mock.rs  mod.rs
backend/crates/llm-eval/: Cargo.toml
backend/crates/llm-eval/fixtures/assistant_cases/: assistant_ambiguous_focus_tomorrow.json  assistant_calendar_agenda_afternoon.json  assistant_calendar_agenda_tonight.json  assistant_calendar_appointments_tomorrow.json  assistant_calendar_lookup.json  assistant_chat_general.json  assistant_email_lookup.json  assistant_email_mailbox_messages.json  assistant_follow_up_prior_calendar_temporal.json  assistant_follow_up_prior_email.json  assistant_follow_up_prior_mixed_same_timeframe.json  assistant_mixed_agenda_inbox_next_week.json  assistant_mixed_lookup.json
backend/crates/llm-eval/fixtures/cases/: meetings_summary_core.json  meetings_summary_schema_violation.json  morning_brief_core.json  urgent_email_core.json  urgent_email_policy_violation.json
backend/crates/llm-eval/fixtures/goldens/: assistant_ambiguous_focus_tomorrow.golden.json  assistant_calendar_agenda_afternoon.golden.json  assistant_calendar_agenda_tonight.golden.json  assistant_calendar_appointments_tomorrow.golden.json  assistant_calendar_lookup.golden.json  assistant_chat_general.golden.json  assistant_email_lookup.golden.json  assistant_email_mailbox_messages.golden.json  assistant_follow_up_prior_calendar_temporal.golden.json  assistant_follow_up_prior_email.golden.json  assistant_follow_up_prior_mixed_same_timeframe.golden.json  assistant_mixed_agenda_inbox_next_week.golden.json  assistant_mixed_lookup.golden.json  meetings_summary_core.golden.json  meetings_summary_schema_violation.golden.json  morning_brief_core.golden.json  urgent_email_core.golden.json  urgent_email_policy_violation.golden.json
backend/crates/llm-eval/src/: assistant_case.rs  case.rs  cli.rs  engine.rs  fixture_io.rs  main.rs  quality.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: assistant_crypto.rs  assistant_memory.rs  assistant_planner.rs  assistant_semantic_plan.rs  automation_schedule.rs  config.rs  config_enclave_runtime.rs  config_env.rs  enclave.rs  enclave_runtime.rs  lib.rs  models.rs  security.rs  timezone.rs
backend/crates/shared/src/assistant_semantic_plan/: tests.rs
backend/crates/shared/src/enclave/: client.rs  contract.rs  mod.rs  service.rs  tests.rs  transport_auth.rs
backend/crates/shared/src/enclave/client/: conversions.rs
backend/crates/shared/src/enclave/service/: google_types.rs
backend/crates/shared/src/enclave/tests/: boundary_guards.rs
backend/crates/shared/src/llm/: context.rs  contracts.rs  gateway.rs  mod.rs  observability.rs  openrouter.rs  prompts.rs  safety.rs  validation.rs
backend/crates/shared/src/llm/reliability/: config.rs  mod.rs  redis_state.rs  state.rs  util.rs
backend/crates/shared/src/repos/: assistant_encrypted_sessions.rs  assistant_sessions.rs  audit.rs  auth.rs  automation.rs  automation_runs.rs  connectors.rs  devices.rs  jobs.rs  mod.rs  preferences.rs  privacy.rs  users.rs
backend/crates/shared/src/security/: attestation.rs  mod.rs  replay.rs  tests.rs
backend/crates/shared/tests/: llm_context.rs  llm_reliability.rs  openrouter_gateway.rs
backend/crates/shared/tests/fixtures/: meetings_today_context.json  morning_brief_context.json  urgent_email_context.json
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: assistant_session_purge.rs  automation_runs.rs  job_processing.rs  main.rs  privacy_delete.rs  privacy_delete_revoke.rs  push_sender.rs  retry.rs  types.rs
backend/crates/worker/src/job_actions/: automation.rs  context.rs  helpers.rs  mod.rs
backend/crates/worker/src/job_actions/google/: ai_observability.rs  fetch.rs  mod.rs  morning_brief.rs  session.rs  urgent_email.rs  util.rs
backend/crates/worker/src/job_actions/google/morning_brief/: tests.rs
backend/crates/worker/src/job_actions/google/urgent_email/: tests.rs
backend/docker/: Dockerfile.api-server  Dockerfile.enclave-runtime  Dockerfile.worker
(+205 files in other folders)
