[workspace]
members = [
  "crates/api-server",
  "crates/enclave-runtime",
  "crates/llm-eval",
  "crates/shared",
  "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hmac = "0.12"
jsonschema = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.29", default-features = false, features = ["tokio-comp", "connection-manager"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
