[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
chrono.workspace = true
reqwest.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
shared = { path = "../shared" }

[dev-dependencies]
base64.workspace = true
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
