[package]
name = "enclave-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
shared = { path = "../shared" }
