[package]
name = "integration-tests"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
api-server = { path = "../api-server" }
axum.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
rand = "0.8"
reqwest.workspace = true
rsa = { version = "0.9", features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
