[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
