[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
redis.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
axum.workspace = true
