[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
shared = { path = "../shared" }
